--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/dracula/Downloads/guava-18.0.jar" sourcepath="/home/dracula/Downloads/guava-18.0-sources.jar"/>
+	<classpathentry kind="lib" path="/home/dracula/Downloads/guava-18.0-sources.jar"/>
+	<classpathentry kind="lib" path="/home/dracula/Downloads/guava-18.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="/home/dracula/Downloads/bcprov-ext-jdk15on-154.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
